--- a/foundry.toml
+++ b/foundry.toml
@@ -26,8 +26,8 @@ number_underscore = "preserve"
 override_spacing = true
 ignore = [
     "src/EVault/EVault.sol",
-    "src/EVault/shared/Storage.sol"
-    "src/EVault/shared/types/MarketStorage.sol"
+    "src/EVault/shared/Storage.sol",
+    "src/EVault/shared/types/MarketStorage.sol",
     "src/EVault/shared/types/MarketCache.sol"
 ]
 
