--- a/foundry.toml
+++ b/foundry.toml
@@ -9,7 +9,7 @@ solc = "0.8.23"
 
 fs_permissions = [{ access = "read-write", path = "./"}]
 
-etherscan_api_key = "2WRUJ9EEBUYAZQRAPRJPXDZ6WA3VWQU4B4"
+etherscan_api_key = ""
 remappings = [
   "ethereum-vault-connector/=lib/ethereum-vault-connector/src"
 ]
