Confs for EVault/modules. Start interestRateModels

--- a/certora/conf/EVault/modules/Liquidation.conf
+++ b/certora/conf/EVault/modules/Liquidation.conf
@@ -1,16 +1,14 @@
 {
   "files": [
-    "src/EVault/EVault.sol"
+    "src/EVault/modules/Liquidation.sol"
   ],
-  "verify": "EVault:certora/specs/benchmarking/EVault_benchmarking.spec",
+  "verify": "Liquidation:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
-  "solc_optimize": "10000",
+  // "solc_via_ir": true,
+  // "solc_optimize": "10000",
   "rule_sanity": "basic",
-  "assert_autofinder_success" : true,
-  "solc_via_ir": true,
-  "msg": "EVault benchmarking",
-  "optimistic_loop": true,
-  "optimistic_hashing": true,
+  // fails currently "assert_autofinder_success" : true,
+  "msg": "Liquidation benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
