--- a/certora/conf/interestRateModels/IRMClassLido.conf
+++ b/certora/conf/interestRateModels/IRMClassLido.conf
@@ -1,14 +1,14 @@
 {
   "files": [
-    "src/interestRateModels/BaseIRMLinearKink.sol"
+    "src/interestRateModels/IRMClassLido.sol"
   ],
-  "verify": "BaseIRMLinearKink:certora/specs/benchmarking/Benchmarking.spec",
+  "verify": "IRMClassLido:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
   "rule_sanity": "basic",
-  "assert_autofinder_success" : true, 
+  // fails currently "assert_autofinder_success" : true, 
   // "solc_via_ir": true,
   // "solc_optimize": "10000",
-  "msg": "BaseIRMLinearKink benchmarking",
+  "msg": "IRMClassLido benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
