--- a/certora/conf/interestRateModels/IRMClassLido.conf
+++ b/certora/conf/interestRateModels/IRMClassLido.conf
@@ -5,7 +5,7 @@
   "verify": "IRMClassLido:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
   "rule_sanity": "basic",
-  // fails currently "assert_autofinder_success" : true, 
+  "assert_autofinder_success" : true, 
   // "solc_via_ir": true,
   // "solc_optimize": "10000",
   "msg": "IRMClassLido benchmarking",
