--- a/certora/conf/EVault/modules/Governance.conf
+++ b/certora/conf/EVault/modules/Governance.conf
@@ -1,14 +1,14 @@
 {
   "files": [
-    "src/EVault/modules/Initialize.sol"
+    "src/EVault/modules/Governance.sol"
   ],
-  "verify": "Initialize:certora/specs/benchmarking/Benchmarking.spec",
+  "verify": "Governance:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
   // "solc_via_ir": true,
   // "solc_optimize": "10000",
   "rule_sanity": "basic",
   // fails currently "assert_autofinder_success" : true,
-  "msg": "Initialize benchmarking",
+  "msg": "Governance benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
@@ -18,7 +18,7 @@
     "-verifyTACDumps",
     "-testMode",
     "-checkRuleDigest",
-    "-callTraceHardFail"
+    "-callTraceHardFail on"
   ],
   "java_args": [
     "-ea",
