--- a/certora/conf/EVault/modules/ModuleDispatch.conf
+++ b/certora/conf/EVault/modules/ModuleDispatch.conf
@@ -18,7 +18,7 @@
     "-verifyTACDumps",
     "-testMode",
     "-checkRuleDigest",
-    "-callTraceHardFail"
+    "-callTraceHardFail on"
   ],
   "java_args": [
     "-ea",
