Various configuration fixes

--- a/certora/conf/EVault/DToken.conf
+++ b/certora/conf/EVault/DToken.conf
@@ -1,18 +1,24 @@
 {
   "files": [
+    "src/Evault/EVault.sol",
     "src/EVault/DToken.sol"
+  ],
+  "link": [
+    "DToken:eVault=EVault",
+    "DToken:evc=EthereumVaultConnector"
   ],
   "verify": "DToken:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
   // "solc_via_ir": true,
   // "solc_optimize": "10000",
   "rule_sanity": "basic",
-  "assert_autofinder_success" : true,
+  // "assert_autofinder_success" : true,
   "msg": "DToken benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  "parametric_contracts": ["DToken"],
   "prover_args": [
     "-verifyCache",
     "-verifyTACDumps",
