--- a/certora/conf/EVault/modules/BalanceForwarder.conf
+++ b/certora/conf/EVault/modules/BalanceForwarder.conf
@@ -1,6 +1,10 @@
 {
   "files": [
+    "src/EVault/shared/types/MarketStorage.sol",
     "src/EVault/modules/BalanceForwarder.sol"
+  ],
+  "link": [
+    "BalanceForwarder:marketStorage=MarketStorage"
   ],
   "verify": "BalanceForwarder:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
