--- a/certora/conf/EVault/modules/Liquidation.conf
+++ b/certora/conf/EVault/modules/Liquidation.conf
@@ -13,6 +13,8 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  "optimistic_loop": true, 
+  "loop_iter": "2",
   "prover_args": [
     "-verifyCache",
     "-verifyTACDumps",
