--- a/certora/conf/EVault/modules/Token.conf
+++ b/certora/conf/EVault/modules/Token.conf
@@ -1,7 +1,16 @@
 {
   "files": [
+    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "src/EVault/modules/Token.sol"
   ],
+  "link" : [
+    // Note: this leads to some havocs of all contracts aside from EVC
+    "Token:evc=EthereumVaultConnector",
+    // Including this one causes a crash for now
+    "EthereumVaultConnector:executionContext=ExecutionContext"
+  ],
+  "parametric_contracts": ["Token"],
   "verify": "Token:certora/specs/benchmarking/EVault/modules/Token.spec",
   "solc": "solc8.23",
   // "solc_via_ir": true,
