--- a/certora/conf/EVault/EVault.conf
+++ b/certora/conf/EVault/EVault.conf
@@ -1,27 +1,37 @@
 {
   "files": [
-    "src/EVault/EVault.sol"
+    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "lib/ethereum-vault-connector/src/ExecutionContext.sol",
+    "certora/harness/EVaultHarness.sol",
   ],
-  "verify": "EVault:certora/specs/benchmarking/Benchmarking.spec",
+  "link" : [
+    "EVaultHarness:evc=EthereumVaultConnector",
+  ],
+  "parametric_contracts": ["EVaultHarness"],
+  "verify": "EVaultHarness:certora/specs/benchmarking/EVault/EVault.spec",
   "solc": "solc8.23",
   "rule_sanity": "basic",
-  // fails currently "assert_autofinder_success" : true, 
-  // "solc_via_ir": true,
-  // "solc_optimize": "10000",
+  // "assert_autofinder_success" : true, 
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
   "msg": "EVault benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "prover_args": [
-    "-verifyCache",
-    "-verifyTACDumps",
-    "-testMode",
-    "-checkRuleDigest",
-    "-callTraceHardFail on"
-  ],
-  "java_args": [
-    "-ea",
-    "-Dlevel.setup.helpers=info"
-  ]
+  // "function_finder_mode": "relaxed",
+  "optimistic_loop": true,
+  "optimistic_hashing": true,
+  "loop_iter": "2",
+  // "prover_args": [
+  //   "-verifyCache",
+  //   "-verifyTACDumps",
+  //   "-testMode",
+  //   "-checkRuleDigest",
+  //   "-callTraceHardFail on"
+  // ],
+  // "java_args": [
+  //   "-ea",
+  //   "-Dlevel.setup.helpers=info"
+  // ]
 }
