--- a/certora/conf/EVault/modules/Borrowing.conf
+++ b/certora/conf/EVault/modules/Borrowing.conf
@@ -1,6 +1,10 @@
 {
   "files": [
+    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "src/EVault/modules/Borrowing.sol"
+  ],
+  "link": [
+    "Borrowing:evc=EthereumVaultConnector",
   ],
   "verify": "Borrowing:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
@@ -13,15 +17,15 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "prover_args": [
-    "-verifyCache",
-    "-verifyTACDumps",
-    "-testMode",
-    "-checkRuleDigest",
-    "-callTraceHardFail on"
-  ],
-  "java_args": [
-    "-ea",
-    "-Dlevel.setup.helpers=info"
-  ]
+  // "prover_args": [
+  //   "-verifyCache",
+  //   "-verifyTACDumps",
+  //   "-testMode",
+  //   "-checkRuleDigest",
+  //   "-callTraceHardFail on"
+  // ],
+  // "java_args": [
+  //   "-ea",
+  //   "-Dlevel.setup.helpers=info"
+  // ]
 }
