--- a/foundry.toml
+++ b/foundry.toml
@@ -11,7 +11,8 @@ fs_permissions = [{ access = "read-write", path = "./"}]
 
 etherscan_api_key = ""
 remappings = [
-  "ethereum-vault-connector/=lib/ethereum-vault-connector/src"
+  "ethereum-vault-connector/=lib/ethereum-vault-connector/src",
+  "openzeppelin/=lib/openzeppelin-contracts/contracts/"
 ]
 gas_reports = ["*"]
 
