--- a/foundry.toml
+++ b/foundry.toml
@@ -12,7 +12,8 @@ fs_permissions = [{ access = "read-write", path = "./"}]
 etherscan_api_key = ""
 remappings = [
   "ethereum-vault-connector/=lib/ethereum-vault-connector/src",
-  "permit2/=lib/permit2"
+  "permit2/=lib/permit2",
+  "openzeppelin/=lib/openzeppelin-contracts/contracts/"
 ]
 gas_reports = ["*"]
 
