Linking for individual modules

--- a/certora/conf/EVault/modules/Borrowing.conf
+++ b/certora/conf/EVault/modules/Borrowing.conf
@@ -1,6 +1,7 @@
 {
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "src/EVault/modules/Borrowing.sol"
   ],
   "link": [
@@ -8,8 +9,8 @@
   ],
   "verify": "Borrowing:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
-  // "solc_via_ir": true,
-  // "solc_optimize": "10000",
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
   "rule_sanity": "basic",
   // fails currently "assert_autofinder_success" : true,
   "msg": "Borrowing benchmarking",
