--- a/certora/conf/EVault/modules/RiskManager.conf
+++ b/certora/conf/EVault/modules/RiskManager.conf
@@ -1,11 +1,16 @@
 {
   "files": [
+    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "src/EVault/modules/RiskManager.sol"
+  ],
+  "link": [
+    "RiskManager:evc=EthereumVaultConnector",
   ],
   "verify": "RiskManager:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
-  // "solc_via_ir": true,
-  // "solc_optimize": "10000",
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
   "rule_sanity": "basic",
   // fails currently "assert_autofinder_success" : true,
   "msg": "RiskManager benchmarking",
@@ -13,15 +18,15 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "prover_args": [
-    "-verifyCache",
-    "-verifyTACDumps",
-    "-testMode",
-    "-checkRuleDigest",
-    "-callTraceHardFail on"
-  ],
-  "java_args": [
-    "-ea",
-    "-Dlevel.setup.helpers=info"
-  ]
+  // "prover_args": [
+  //   "-verifyCache",
+  //   "-verifyTACDumps",
+  //   "-testMode",
+  //   "-checkRuleDigest",
+  //   "-callTraceHardFail on"
+  // ],
+  // "java_args": [
+  //   "-ea",
+  //   "-Dlevel.setup.helpers=info"
+  // ]
 }
