--- a/certora/conf/EVault/modules/Token.conf
+++ b/certora/conf/EVault/modules/Token.conf
@@ -5,16 +5,13 @@
     "src/EVault/modules/Token.sol"
   ],
   "link" : [
-    // Note: this leads to some havocs of all contracts aside from EVC
     "Token:evc=EthereumVaultConnector",
-    // Including this one causes a crash for now
-    "EthereumVaultConnector:executionContext=ExecutionContext"
   ],
   "parametric_contracts": ["Token"],
   "verify": "Token:certora/specs/benchmarking/EVault/modules/Token.spec",
   "solc": "solc8.23",
-  // "solc_via_ir": true,
-  // "solc_optimize": "10000",
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
   "rule_sanity": "basic",
   // fails currently "assert_autofinder_success" : true,
   "msg": "Token benchmarking",
@@ -22,15 +19,15 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "prover_args": [
-    "-verifyCache",
-    "-verifyTACDumps",
-    "-testMode",
-    "-checkRuleDigest",
-    "-callTraceHardFail on"
-  ],
-  "java_args": [
-    "-ea",
-    "-Dlevel.setup.helpers=info"
-  ]
+  // "prover_args": [
+  //   "-verifyCache",
+  //   "-verifyTACDumps",
+  //   "-testMode",
+  //   "-checkRuleDigest",
+  //   "-callTraceHardFail on"
+  // ],
+  // "java_args": [
+  //   "-ea",
+  //   "-Dlevel.setup.helpers=info"
+  // ]
 }
