--- a/certora/conf/EVault/modules/Liquidation.conf
+++ b/certora/conf/EVault/modules/Liquidation.conf
@@ -1,6 +1,11 @@
 {
   "files": [
+    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "src/EVault/modules/Liquidation.sol"
+  ],
+  "link": [
+    "Liquidation:evc=EthereumVaultConnector",
   ],
   "verify": "Liquidation:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
@@ -15,15 +20,15 @@
   ],
   "optimistic_loop": true, 
   "loop_iter": "2",
-  "prover_args": [
-    "-verifyCache",
-    "-verifyTACDumps",
-    "-testMode",
-    "-checkRuleDigest",
-    "-callTraceHardFail on"
-  ],
-  "java_args": [
-    "-ea",
-    "-Dlevel.setup.helpers=info"
-  ]
+  // "prover_args": [
+  //   "-verifyCache",
+  //   "-verifyTACDumps",
+  //   "-testMode",
+  //   "-checkRuleDigest",
+  //   "-callTraceHardFail on"
+  // ],
+  // "java_args": [
+  //   "-ea",
+  //   "-Dlevel.setup.helpers=info"
+  // ]
 }
