--- a/certora/conf/EVault/modules/Initialize.conf
+++ b/certora/conf/EVault/modules/Initialize.conf
@@ -13,6 +13,7 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  "parametric_contracts": ["Initialize"],
   // "prover_args": [
   //   "-verifyCache",
   //   "-verifyTACDumps",
