--- a/certora/conf/EVault/modules/ModuleDispatch.conf
+++ b/certora/conf/EVault/modules/ModuleDispatch.conf
@@ -4,8 +4,8 @@
   ],
   "verify": "ModuleDispatchHarness:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
-  // "solc_via_ir": true,
-  // "solc_optimize": "10000",
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
   "rule_sanity": "basic",
   // fails currently "assert_autofinder_success" : true,
   "msg": "Module Dispatch benchmarking",
@@ -13,15 +13,16 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "prover_args": [
-    "-verifyCache",
-    "-verifyTACDumps",
-    "-testMode",
-    "-checkRuleDigest",
-    "-callTraceHardFail on"
-  ],
-  "java_args": [
-    "-ea",
-    "-Dlevel.setup.helpers=info"
-  ]
+  "parametric_contracts": ["ModuleDispatch"],
+  // "prover_args": [
+  //   "-verifyCache",
+  //   "-verifyTACDumps",
+  //   "-testMode",
+  //   "-checkRuleDigest",
+  //   "-callTraceHardFail on"
+  // ],
+  // "java_args": [
+  //   "-ea",
+  //   "-Dlevel.setup.helpers=info"
+  // ]
 }
