--- a/certora/conf/EVault/modules/Borrowing.conf
+++ b/certora/conf/EVault/modules/Borrowing.conf
@@ -18,6 +18,7 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  "parametric_contracts": ["Borrowing"],
   // "prover_args": [
   //   "-verifyCache",
   //   "-verifyTACDumps",
