--- a/certora/conf/EVault/modules/Liquidation.conf
+++ b/certora/conf/EVault/modules/Liquidation.conf
@@ -18,6 +18,7 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  "parametric_contracts": ["Liquidation"],
   "optimistic_loop": true, 
   "loop_iter": "2",
   // "prover_args": [
