dtoken use evaultHarness

--- a/certora/conf/EVault/DToken.conf
+++ b/certora/conf/EVault/DToken.conf
@@ -1,15 +1,15 @@
 {
   "files": [
-    "src/Evault/EVault.sol",
+    "certora/harness/EVaultHarness.sol",
     "src/EVault/DToken.sol"
   ],
   "link": [
-    "DToken:eVault=EVault",
+    "DToken:eVault=EVaultHarness",
   ],
   "verify": "DToken:certora/specs/benchmarking/EVault/modules/DToken.spec",
   "solc": "solc8.23",
-  // "solc_via_ir": true,
-  // "solc_optimize": "10000",
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
   "rule_sanity": "basic",
   // "assert_autofinder_success" : true,
   "msg": "DToken benchmarking",
@@ -18,15 +18,15 @@
       "forge-std=lib/forge-std/src"
   ],
   "parametric_contracts": ["DToken"],
-  "prover_args": [
-    "-verifyCache",
-    "-verifyTACDumps",
-    "-testMode",
-    "-checkRuleDigest",
-    "-callTraceHardFail on"
-  ],
-  "java_args": [
-    "-ea",
-    "-Dlevel.setup.helpers=info"
-  ]
+  // "prover_args": [
+  //   "-verifyCache",
+  //   "-verifyTACDumps",
+  //   "-testMode",
+  //   "-checkRuleDigest",
+  //   "-callTraceHardFail on"
+  // ],
+  // "java_args": [
+  //   "-ea",
+  //   "-Dlevel.setup.helpers=info"
+  // ]
 }
