--- a/certora/conf/EVault/modules/Governance.conf
+++ b/certora/conf/EVault/modules/Governance.conf
@@ -2,10 +2,12 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
+    "src/ProtocolConfig/ProtocolConfig.sol",
     "src/EVault/modules/Governance.sol"
   ],
   "link": [
-    "Governance:evc=EthereumVaultConnector",
+    "Governance:protocolConfig=ProtocolConfig",
+    "Governance:evc=EthereumVaultConnector"
   ],
   "verify": "Governance:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
