feat: initial invariant suite

--- a/foundry.toml
+++ b/foundry.toml
@@ -9,12 +9,12 @@ solc = "0.8.23"
 
 fs_permissions = [{ access = "read-write", path = "./"}]
 
-etherscan_api_key = ""
-remappings = [
-  "ethereum-vault-connector/=lib/ethereum-vault-connector/src",
-  "permit2/=lib/permit2"
-]
-gas_reports = ["*"]
+# etherscan_api_key = ""
+# remappings = [
+#   "ethereum-vault-connector/=lib/ethereum-vault-connector/src",
+#   "permit2/=lib/permit2"
+# ]
+# gas_reports = ["*"]
 
 
 [profile.default.fmt]
