chore: use forge build without the --sizes option

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
             - name: Run foundry build
               run: |
                   forge --version
-                  forge build --sizes
+                  forge build
               id: build
 
     lint-check:
