Clean up commented options

--- a/certora/conf/EVault/modules/Borrowing.conf
+++ b/certora/conf/EVault/modules/Borrowing.conf
@@ -12,22 +12,10 @@
   "solc_via_ir": true,
   "solc_optimize": "10000",
   "rule_sanity": "basic",
-  // fails currently "assert_autofinder_success" : true,
   "msg": "Borrowing benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "parametric_contracts": ["Borrowing"],
-  // "prover_args": [
-  //   "-verifyCache",
-  //   "-verifyTACDumps",
-  //   "-testMode",
-  //   "-checkRuleDigest",
-  //   "-callTraceHardFail on"
-  // ],
-  // "java_args": [
-  //   "-ea",
-  //   "-Dlevel.setup.helpers=info"
-  // ]
+  "parametric_contracts": ["Borrowing"]
 }
