--- a/certora/conf/EVault/modules/Liquidation.conf
+++ b/certora/conf/EVault/modules/Liquidation.conf
@@ -2,22 +2,24 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    "src/EVault/modules/Liquidation.sol"
+    // "src/EVault/shared/types/Types.sol",
+    "src/EVault/modules/Liquidation.sol",
+    "certora/harness/LiquidationHarness.sol"
   ],
   "link": [
-    "Liquidation:evc=EthereumVaultConnector",
+    "LiquidationHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "Liquidation:certora/specs/benchmarking/Benchmarking.spec",
+  "verify": "LiquidationHarness:certora/specs/EVault/modules/Liquidation.spec",
   "solc": "solc8.23",
-  // "solc_via_ir": true,
-  // "solc_optimize": "10000",
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
   "rule_sanity": "basic",
   "msg": "Liquidation benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "parametric_contracts": ["Liquidation"],
+  "parametric_contracts": ["LiquidationHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
 }
