--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,7 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["lib"]
+libs = ['node_modules', 'lib']
 
 optimizer = true
 optimizer_runs = 20_000
