checkLiquidation_healthy finally working

--- a/certora/conf/EVault/modules/Liquidation.conf
+++ b/certora/conf/EVault/modules/Liquidation.conf
@@ -19,7 +19,7 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "coverage_info" : "advanced",
+  // "coverage_info" : "advanced",
   "parametric_contracts": ["LiquidationHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
