--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,12 @@ jobs:
               with:
                   version: nightly
 
+            - name: Install packages
+              uses: actions/setup-node@v3
+              with:
+                  node-version: '18.x'
+              run: npm i
+
             - name: Run foundry build
               run: |
                   forge --version
@@ -56,6 +62,15 @@ jobs:
               run: |
                   forge test -vv --gas-report --ast 
               id: test
+    
+    legacy-test:
+        runs-on: ubuntu-latest
+        needs: lint-check
+        steps:
+        # - uses: actions/checkout@v3
+        #     shell: bash
+            - name: Run Tests
+              run: npx hardhat test
 
     coverage:
         runs-on: ubuntu-latest
