fix after master update

--- a/certora/conf/EVault/modules/Liquidation.conf
+++ b/certora/conf/EVault/modules/Liquidation.conf
@@ -19,9 +19,9 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "rule": [
-    "checkLiquidation_maxYieldGreater"
-  ],
+  // "rule": [
+  //   "checkLiquidation_maxYieldGreater"
+  // ],
   // "coverage_info" : "advanced",
   "parametric_contracts": ["LiquidationHarness"],
   "optimistic_loop": true, 
