--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
     pull_request:
 
 jobs:
-    build:
+    setup:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -19,13 +19,27 @@ jobs:
               with:
                   version: nightly
 
-            - name: Install packages
-              uses: actions/setup-node@v3
-              with:
-                  node-version: '18.x'
+            - name: Install Node.js dependencies
+              run: npm install
 
-            - name: Install NPM packages
-              run: npm i
+
+            # Cache Node.js dependencies
+            - name: Cache Node.js dependencies
+                uses: actions/cache@v2
+                with:
+                path: node_modules
+                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+
+    build:
+        runs-on: ubuntu-latest
+        needs: setup
+        steps:
+            - uses: actions/checkout@v3
+              with:
+                  submodules: recursive
+            - uses: foundry-rs/foundry-toolchain@v1
+              with:
+                  version: nightly
 
             - name: Run foundry build
               run: |
