--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
     pull_request:
 
 jobs:
-    setup:
+    build:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -19,41 +19,15 @@ jobs:
               with:
                   version: nightly
 
-            # - name: Install Node.js dependencies
-            #   run: npm install
-
-            - name: Setup Node 18
+            - name: Install packages
               uses: actions/setup-node@v3
               with:
                   node-version: '18.x'
                   cache: 'npm'
 
-            - name: Install Node dependencies
-              run: |
-                  npm ci
+            - name: Install NPM packages
+              run: npm ci
 
-            # Cache Node.js dependencies
-            # - name: Cache Node.js dependencies
-            #   uses: actions/cache@v2
-            #   with:
-            #       path: node_modules
-            #       key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-
-    build:
-        runs-on: ubuntu-latest
-        needs: setup
-        steps:
-            - uses: actions/checkout@v3
-              with:
-                  submodules: recursive
-            - uses: foundry-rs/foundry-toolchain@v1
-              with:
-                  version: nightly
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: '18.x'
-                  cache: 'npm'
-                  
             - name: Run foundry build
               run: |
                   forge --version
