--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,18 +13,15 @@ jobs:
             - uses: actions/checkout@v3
               with:
                   submodules: recursive
-
             - name: Install foundry
               uses: foundry-rs/foundry-toolchain@v1
               with:
                   version: nightly
-
             - name: Install packages
               uses: actions/setup-node@v3
               with:
                   node-version: '18.x'
                   cache: 'npm'
-
             - name: Install NPM packages
               run: npm ci
 
@@ -57,13 +54,17 @@ jobs:
             - uses: actions/checkout@v3
               with:
                   submodules: recursive
-            - uses: foundry-rs/foundry-toolchain@v1
+            - name: Install foundry
+              uses: foundry-rs/foundry-toolchain@v1
               with:
                   version: nightly
-            - uses: actions/setup-node@v3
+            - name: Install packages
+              uses: actions/setup-node@v3
               with:
                   node-version: '18.x'
                   cache: 'npm'
+            - name: Install NPM packages
+              run: npm ci
     
             - name: Run foundry tests
               # --ast tests enables inline configs to work https://github.com/foundry-rs/foundry/issues/7310#issuecomment-1978088200
@@ -75,8 +76,21 @@ jobs:
         runs-on: ubuntu-latest
         needs: lint-check
         steps:
-        # - uses: actions/checkout@v3
-        #     shell: bash
+            - uses: actions/checkout@v3
+              with:
+                submodules: recursive
+            - name: Install foundry
+             uses: foundry-rs/foundry-toolchain@v1
+             with:
+                 version: nightly
+            - name: Install packages
+             uses: actions/setup-node@v3
+             with:
+                 node-version: '18.x'
+                 cache: 'npm'
+            - name: Install NPM packages
+              run: npm ci
+
             - name: Run Tests
               run: npx hardhat test
 
@@ -86,10 +100,19 @@ jobs:
         steps:
             - uses: actions/checkout@v3
               with:
-                  submodules: recursive
-            - uses: foundry-rs/foundry-toolchain@v1
-              with:
-                  version: nightly
+                submodules: recursive
+            - name: Install foundry
+             uses: foundry-rs/foundry-toolchain@v1
+             with:
+                 version: nightly
+            - name: Install packages
+             uses: actions/setup-node@v3
+             with:
+                 node-version: '18.x'
+                 cache: 'npm'
+            - name: Install NPM packages
+              run: npm ci
+
             - name: Run foundry coverage
               run: |
                   FOUNDRY_PROFILE=coverage forge coverage --report summary
