Fixes for function finding

--- a/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
+++ b/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
@@ -9,7 +9,7 @@
   "link": [
     "LiquidationHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "LiquidationHarness:certora/specs/EVault/modules/Liquidation.spec",
+  "verify": "LiquidationHarness:certora/specs/CER-161-Liquidation/CER-162-CheckLiquidation.spec",
   "solc": "solc8.23",
   "msg": "Liquidation benchmarking",
   "packages": [
@@ -27,6 +27,6 @@
   "solc_optimize": "10000",
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
-  "finder_friendly_optimizer" : "no",
+  "finder_friendly_optimizer" : false,
   "prover_version" : "master" // need for dev fix
 }
