--- a/certora/conf/CER-161-Liquidation/CER-163-Liquidate.conf
+++ b/certora/conf/CER-161-Liquidation/CER-163-Liquidate.conf
@@ -2,14 +2,13 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    // "src/EVault/shared/types/Types.sol",
     "src/EVault/modules/Liquidation.sol",
     "certora/harness/LiquidationHarness.sol"
   ],
   "link": [
     "LiquidationHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "LiquidationHarness:certora/specs/EVault/modules/Liquidation.spec",
+  "verify": "LiquidationHarness:certora/specs/CER-161-Liquidation/CER-163-Liquidate.spec",
   "solc": "solc8.23",
   "msg": "Liquidation benchmarking",
   "packages": [
@@ -17,7 +16,7 @@
       "forge-std=lib/forge-std/src"
   ],
   // "rule": [
-  //   "checkLiquidation_maxYieldGreater"
+  //   "calculateLiquidation_setViolator"
   // ],
   // "coverage_info" : "advanced",
   "parametric_contracts": ["LiquidationHarness"],
@@ -27,6 +26,6 @@
   "solc_optimize": "10000",
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
-  "finder_friendly_optimizer" : "no",
+  "finder_friendly_optimizer" : false,
   "prover_version" : "master" // need for dev fix
 }
