Summarize PriceOracle, cleanup

--- a/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
+++ b/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
@@ -17,11 +17,11 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "rule": [
-    "loadVaultSanity"
-    // "checkLiquidation_maxYieldGreater"
-    // "debugCheckLiquidation"
-  ],
+  // "rule": [
+  //   "loadVaultSanity"
+  //   // "checkLiquidation_maxYieldGreater"
+  //   // "debugCheckLiquidation"
+  // ],
   // "coverage_info" : "advanced",
   "parametric_contracts": ["LiquidationHarness"],
   "optimistic_loop": true, 
