--- a/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
+++ b/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
@@ -3,6 +3,7 @@
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "src/EVault/shared/lib/SafeERC20Lib.sol",
+    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
     // "src/EVault/shared/types/Types.sol",
     "src/EVault/modules/Liquidation.sol",
     "certora/harness/LiquidationHarness.sol"
@@ -17,12 +18,11 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  // "rule": [
-  //   "loadVaultSanity"
-  //   // "checkLiquidation_maxYieldGreater"
-  //   // "debugCheckLiquidation"
-  // ],
-  // "coverage_info" : "advanced",
+  "rule": [
+    "checkLiquidation_maxYieldGreater"
+    // "debugCheckLiquidation"
+  ],
+  "coverage_info" : "advanced",
   "parametric_contracts": ["LiquidationHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
