--- a/certora/conf/CER-161-Liquidation/CER-163-Liquidate.conf
+++ b/certora/conf/CER-161-Liquidation/CER-163-Liquidate.conf
@@ -2,6 +2,7 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
+    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
     "src/EVault/modules/Liquidation.sol",
     "certora/harness/LiquidationHarness.sol"
   ],
