--- a/foundry.toml
+++ b/foundry.toml
@@ -32,4 +32,9 @@ max_test_rejects = 1_000_000
 seed = "0xee1d0f7d9556539a9c0e26aed5e63556"
 runs = 1000
 
+[profile.default.invariant]
+call_override = false # Override unsafe external calls to perform reentrancy checks
+depth = 50
+runs = 1000
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
