--- a/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
+++ b/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
@@ -2,6 +2,7 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
+    "src/EVault/shared/lib/SafeERC20Lib.sol",
     // "src/EVault/shared/types/Types.sol",
     "src/EVault/modules/Liquidation.sol",
     "certora/harness/LiquidationHarness.sol"
@@ -16,9 +17,11 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  // "rule": [
-  //   "checkLiquidation_maxYieldGreater"
-  // ],
+  "rule": [
+    "loadVaultSanity"
+    // "checkLiquidation_maxYieldGreater"
+    // "debugCheckLiquidation"
+  ],
   // "coverage_info" : "advanced",
   "parametric_contracts": ["LiquidationHarness"],
   "optimistic_loop": true, 
