--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,22 @@ jobs:
                   forge test -vv --gas-report --ast 
               id: test
 
+    overrides:
+        runs-on: ubuntu-latest
+        needs: lint-check
+        steps:
+            - uses: actions/checkout@v3
+              with:
+                  submodules: recursive
+            - uses: foundry-rs/foundry-toolchain@v1
+              with:
+                  version: nightly
+            - name: Run foundry overrides test mode
+              # --ast tests enables inline configs to work https://github.com/foundry-rs/foundry/issues/7310#issuecomment-1978088200
+              run: |
+                  DEPLOY_OVERRIDES=true forge test -vv --gas-report --ast 
+              id: overrides
+
     coverage:
         runs-on: ubuntu-latest
         needs: lint-check
