Balance forwarder working

--- a/certora/conf/CER-131-Vault.conf
+++ b/certora/conf/CER-131-Vault.conf
@@ -2,23 +2,29 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    "src/EVault/modules/Vault.sol"
+    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    "src/EVault/modules/Vault.sol",
+    "certora/harness/VaultHarness.sol"
   ],
-  "link" : [
-    "Vault:evc=EthereumVaultConnector",
+  "link": [
+    "VaultHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "Vault:certora/specs/CER-131-Vault.spec",
+  "verify": "VaultHarness:certora/specs/CER-131-Vault.spec",
   "solc": "solc8.23",
-  "msg": "Vault benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  "rule": [
+    "balance_forwarding_called_deposit"
+  ],
+  "coverage_info" : "advanced",
   "parametric_contracts": ["Vault"],
+  "optimistic_loop": true, 
+  "loop_iter": "2",
   "solc_via_ir": true,
   "solc_optimize": "10000",
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
-  "prover_version" : "master" // need for dev fix
 }
