--- a/certora/conf/CER-131-Vault.conf
+++ b/certora/conf/CER-131-Vault.conf
@@ -15,9 +15,9 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "rule": [
-    "balance_forwarding_called_deposit"
-  ],
+  // "rule": [
+  //   "balance_forwarding_called_deposit"
+  // ],
   "coverage_info" : "advanced",
   "parametric_contracts": ["Vault"],
   "optimistic_loop": true, 
