--- a/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
+++ b/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
@@ -28,6 +28,5 @@
   "solc_optimize": "10000",
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
-  "finder_friendly_optimizer" : false,
-  "prover_version" : "master" // need for dev fix
+  "finder_friendly_optimizer" : true,
 }
