Mainly BalanceForwarder. Also Vault, CheckLiquidation

--- a/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
+++ b/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
@@ -16,10 +16,10 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  // "rule": [
-  //   "checkLiquidation_maxYieldGreater"
-  //   // "debugCheckLiquidation"
-  // ],
+  "rule": [
+    "checkLiquidation_healthy"
+    // "debugCheckLiquidation"
+  ],
   // "coverage_info" : "advanced",
   "parametric_contracts": ["LiquidationHarness"],
   "optimistic_loop": true, 
