--- a/certora/conf/CER-182-BalanceForwarder.conf
+++ b/certora/conf/CER-182-BalanceForwarder.conf
@@ -3,23 +3,21 @@
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
-    "src/EVault/modules/Vault.sol",
+    "src/EVault/modules/BalanceForwarder.sol",
     "certora/harness/VaultHarness.sol"
   ],
   "link": [
-    "VaultHarness:evc=EthereumVaultConnector",
+    "BalanceForwarder:evc=EthereumVaultConnector",
   ],
-  "verify": "VaultHarness:certora/specs/CER-131-Vault.spec",
+  "verify": "BalanceForwarder:certora/specs/CER-182-BalanceForwarder.spec",
   "solc": "solc8.23",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  // "rule": [
-  //   "balance_forwarding_called_deposit"
-  // ],
-  "coverage_info" : "advanced",
-  "parametric_contracts": ["VaultHarness"],
+  "prover_args": ["-smt_bitVectorTheory", "true"],
+  // "coverage_info" : "advanced",
+  "parametric_contracts": ["BalanceForwarder"],
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
