RiskManager revert cases. CheckLiquidation healthy

--- a/certora/conf/CER-155-RiskManager.conf
+++ b/certora/conf/CER-155-RiskManager.conf
@@ -3,30 +3,22 @@
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
-    "src/EVault/modules/Liquidation.sol",
-    "certora/harness/LiquidationHarness.sol"
+    "src/EVault/modules/RiskManager.sol",
+    "certora/harness/RiskManagerHarness.sol",
   ],
   "link": [
-    "LiquidationHarness:evc=EthereumVaultConnector",
+    "RiskManagerHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "LiquidationHarness:certora/specs/CER-161-Liquidation/CER-162-CheckLiquidation.spec",
+  "verify": "RiskManagerHarness:certora/specs/CER-155-RiskManager.spec",
   "solc": "solc8.23",
-  "msg": "Liquidation benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-	"prover_args": [
-		"-depth 0",
-		"-smt_nonLinearArithmetic true",
-		"-adaptiveSolverConfig false"
-	],
-  "rule": [
-    "checkLiquidation_maxYieldGreater"
-    // "debugCheckLiquidation"
-  ],
-  // "coverage_info" : "advanced",
-  "parametric_contracts": ["LiquidationHarness"],
+  // "rule": [
+  // ],
+  "coverage_info" : "advanced",
+  "parametric_contracts": ["RiskManagerHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
