Mainly fix quotes summary, SMT config

--- a/certora/conf/CER-155-RiskManager.conf
+++ b/certora/conf/CER-155-RiskManager.conf
@@ -15,8 +15,14 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  // "rule": [
-  // ],
+  "rule": [
+    "liquidations_equal_for_one"
+  ],
+	"prover_args": [
+		"-depth 3",
+		"-smt_nonLinearArithmetic true",
+		"-adaptiveSolverConfig false"
+	],
   "coverage_info" : "advanced",
   "parametric_contracts": ["RiskManagerHarness"],
   "optimistic_loop": true, 
