Mainly getCollateralValue_borrowing_lower

--- a/certora/conf/CER-155-RiskManager.conf
+++ b/certora/conf/CER-155-RiskManager.conf
@@ -16,10 +16,10 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule": [
-    "liquidations_equal_for_one"
+    "ltv_borrowing_lower"
   ],
 	"prover_args": [
-		"-depth 3",
+		"-depth 0",
 		"-smt_nonLinearArithmetic true",
 		"-adaptiveSolverConfig false"
 	],
