Mainly move assumptions from CheckLiquidation to RiskManager

--- a/certora/conf/CER-155-RiskManager.conf
+++ b/certora/conf/CER-155-RiskManager.conf
@@ -17,13 +17,14 @@
   ],
   "rule": [
     "ltv_borrowing_lower"
+    // "liquidations_equal_for_one"
   ],
 	"prover_args": [
 		"-depth 0",
 		"-smt_nonLinearArithmetic true",
 		"-adaptiveSolverConfig false"
 	],
-  "coverage_info" : "advanced",
+  // "coverage_info" : "advanced",
   "parametric_contracts": ["RiskManagerHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
@@ -31,5 +32,4 @@
   "solc_optimize": "10000",
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
-  "finder_friendly_optimizer" : true,
 }
