--- a/certora/conf/CER-155-RiskManager.conf
+++ b/certora/conf/CER-155-RiskManager.conf
@@ -4,6 +4,7 @@
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
     "src/EVault/modules/RiskManager.sol",
+    "certora/harness/BaseHarness.sol",
     "certora/harness/RiskManagerHarness.sol",
   ],
   "link": [
@@ -19,17 +20,20 @@
     "ltv_borrowing_lower"
     // "liquidations_equal_for_one"
   ],
+  "parametric_contracts": ["RiskManagerHarness"],
+  "rule_sanity": "basic",
+  // "coverage_info" : "advanced",
+  // Performance tuning options below this line
 	"prover_args": [
 		"-depth 0",
 		"-smt_nonLinearArithmetic true",
 		"-adaptiveSolverConfig false"
 	],
-  // "coverage_info" : "advanced",
-  "parametric_contracts": ["RiskManagerHarness"],
+  "function_finder_mode": "relaxed",
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
   "solc_optimize": "10000",
-  "rule_sanity": "basic",
-  "function_finder_mode" : "relaxed",
+  "smt_timeout": "7000",
+  "prover_version": "master"
 }
