--- a/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
+++ b/certora/conf/CER-161-Liquidation/CER-162-CheckLiquidation.conf
@@ -4,6 +4,7 @@
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
     "src/EVault/modules/Liquidation.sol",
+    "certora/harness/BaseHarness.sol",
     "certora/harness/LiquidationHarness.sol"
   ],
   "link": [
@@ -16,20 +17,23 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  // "rule": [
+  //   "getCollateralValue_borrowing_lower"
+  // ],
+  "parametric_contracts": ["LiquidationHarness"],
+  "rule_sanity": "basic",
+  // "coverage_info" : "advanced",
+  // Performance tuing options below this line
 	"prover_args": [
 		"-depth 10",
 		"-smt_nonLinearArithmetic true",
 		"-adaptiveSolverConfig false"
 	],
-  "rule": [
-    "getCollateralValue_borrowing_lower"
-  ],
-  // "coverage_info" : "advanced",
-  "parametric_contracts": ["LiquidationHarness"],
+  "function_finder_mode": "relaxed",
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
   "solc_optimize": "10000",
-  "rule_sanity": "basic",
-  "function_finder_mode" : "relaxed",
+  "smt_timeout": "7000",
+  "prover_version": "master"
 }
