feat: perspectives first attempt

--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,8 @@ libs = ["lib"]
 
 optimizer = true
 optimizer_runs = 20_000
-solc = "0.8.23"
+solc = "0.8.24"
+evm_version = "cancun"
 
 fs_permissions = [{ access = "read-write", path = "./"}]
 
