--- a/certora/conf/CER-155-RiskManager.conf
+++ b/certora/conf/CER-155-RiskManager.conf
@@ -22,6 +22,7 @@
   ],
   "parametric_contracts": ["RiskManagerHarness"],
   "rule_sanity": "basic",
+  "server": "production",
   // "coverage_info" : "advanced",
   // Performance tuning options below this line
 	"prover_args": [
