More refactoring. Use BaseHarness for BalanceForwarder

--- a/certora/conf/BalanceForwarder.conf
+++ b/certora/conf/BalanceForwarder.conf
@@ -4,12 +4,13 @@
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
     "src/EVault/modules/BalanceForwarder.sol",
-    "certora/harness/VaultHarness.sol"
+    "certora/harness/BaseHarness.sol",
+    "certora/harness/BalanceForwarderHarness.sol",
   ],
   "link": [
-    "BalanceForwarder:evc=EthereumVaultConnector",
+    "BalanceForwarderHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "BalanceForwarder:certora/specs/CER-182-BalanceForwarder.spec",
+  "verify": "BalanceForwarderHarness:certora/specs/BalanceForwarder.spec",
   "solc": "solc8.23",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
