--- a/certora/conf/DELETE_Vault.conf
+++ b/certora/conf/DELETE_Vault.conf
@@ -9,7 +9,7 @@
   "link": [
     "VaultHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "VaultHarness:certora/specs/CER-131-Vault.spec",
+  "verify": "VaultHarness:certora/specs/Vault.spec",
   "solc": "solc8.23",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
