--- a/certora/conf/RiskManager.conf
+++ b/certora/conf/RiskManager.conf
@@ -10,16 +10,16 @@
   "link": [
     "RiskManagerHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "RiskManagerHarness:certora/specs/CER-155-RiskManager.spec",
+  "verify": "RiskManagerHarness:certora/specs/RiskManager.spec",
   "solc": "solc8.23",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "rule": [
-    "ltv_borrowing_lower"
-    // "liquidations_equal_for_one"
-  ],
+  // "rule": [
+  //   "ltv_borrowing_lower"
+  //   // "liquidations_equal_for_one"
+  // ],
   "parametric_contracts": ["RiskManagerHarness"],
   "rule_sanity": "basic",
   "server": "production",
